<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical">
    <EditText
        android:id="@+id/project_name_config"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/project_title_hint"
        android:inputType="text"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:text="@string/const_start_date"
            android:textColor="@android:color/black"
            android:textSize="17dp" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_gravity="right"
            style="@android:style/Widget.EditText"
            android:hint="Choose start date"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:focusable="false"
            android:id="@+id/start_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/const_end_date"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"/>
        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingTop="5dp"
            android:textSize="17dp"
            android:hint="Choose end date"
            style="@android:style/Widget.EditText"
            android:focusable="false"
            android:layout_marginLeft="29dp"
            android:id="@+id/end_date"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/project_submit_button"/>
</LinearLayout>
